--- a/public/pages/nosotros.html
+++ b/public/pages/nosotros.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <!-- Contenedor que abarca toda la pantalla con la imagen de fondo -->
-  <div class="relative h-screen bg-cover bg-center parallax" style="background-image: url('/images/inicio1.jpg');">
+  <div class="relative h-screen bg-cover bg-center parallax" style="background-image: url('/images/ns1.jpg');">
     <!-- Navbar -->
   <nav class="fixed w-full bg-black p-4 z-50">
     <div class="max-w-6xl mx-auto flex items-center justify-between">
@@ -55,7 +55,7 @@
     </div>
   </div>
   
-  <section class="relative h-screen bg-black text-white parallax" style="background-image: url('/images/inicio2.jpg');">
+  <section class="relative h-screen bg-black text-white parallax" style="background-image: url('/images/ns3.jpg');">
     <div class="relative inset-0">
       <div class="rela inset-0 bg-gradient-to-t from-black/50 to-transparent"></div>
     </div>
@@ -65,46 +65,46 @@
           <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4">
             <div class="grid gap-4">
               <div>
-                <img class="h-auto max-w-full rounded-lg transition-transform duration-500 hover:scale-105" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image.jpg" alt="">
+                <img class="h-auto max-w-full rounded-lg transition-transform duration-500 hover:scale-105" src="/images/productos/P_A.png" alt="">
               </div>
               <div>
-                <img class="h-auto max-w-full rounded-lg transition-transform duration-500 hover:scale-105" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-1.jpg" alt="">
+                <img class="h-auto max-w-full rounded-lg transition-transform duration-500 hover:scale-105" src="/images/productos/P_C.png" alt="">
               </div>
               <div>
-                <img class="h-auto max-w-full rounded-lg transition-transform duration-500 hover:scale-105" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-2.jpg" alt="">
-              </div>
-            </div>
-            <div class="grid gap-4">
-              <div>
-                <img class="h-auto max-w-full rounded-lg transition-transform duration-500 hover:scale-105" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-3.jpg" alt="">
-              </div>
-              <div>
-                <img class="h-auto max-w-full rounded-lg transition-transform duration-500 hover:scale-105" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-4.jpg" alt="">
-              </div>
-              <div>
-                <img class="h-auto max-w-full rounded-lg transition-transform duration-500 hover:scale-105" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-5.jpg" alt="">
+                <img class="h-auto max-w-full rounded-lg transition-transform duration-500 hover:scale-105" src="/images/productos/P_Maracuya.png" alt="">
               </div>
             </div>
             <div class="grid gap-4">
               <div>
-                <img class="h-auto max-w-full rounded-lg transition-transform duration-500 hover:scale-105" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-6.jpg" alt="">
+                <img class="h-auto max-w-full rounded-lg transition-transform duration-500 hover:scale-105" src="/images/productos/P_M.png" alt="">
               </div>
               <div>
-                <img class="h-auto max-w-full rounded-lg transition-transform duration-500 hover:scale-105" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-7.jpg" alt="">
+                <img class="h-auto max-w-full rounded-lg transition-transform duration-500 hover:scale-105" src="/images/productos/P_Cacao.png" alt="">
               </div>
               <div>
-                <img class="h-auto max-w-full rounded-lg transition-transform duration-500 hover:scale-105" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-8.jpg" alt="">
+                <img class="h-auto max-w-full rounded-lg transition-transform duration-500 hover:scale-105" src="/images/productos/P_F.png" alt="">
               </div>
             </div>
             <div class="grid gap-4">
               <div>
-                <img class="h-auto max-w-full rounded-lg transition-transform duration-500 hover:scale-105" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-9.jpg" alt="">
+                <img class="h-auto max-w-full rounded-lg transition-transform duration-500 hover:scale-105" src="/images/productos/P_P.png" alt="">
               </div>
               <div>
-                <img class="h-auto max-w-full rounded-lg transition-transform duration-500 hover:scale-105" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-10.jpg" alt="">
+                <img class="h-auto max-w-full rounded-lg transition-transform duration-500 hover:scale-105" src="/images/nsCar.jpg" alt="">
               </div>
               <div>
-                <img class="h-auto max-w-full rounded-lg transition-transform duration-500 hover:scale-105" src="https://flowbite.s3.amazonaws.com/docs/gallery/masonry/image-11.jpg" alt="">
+                <img class="h-auto max-w-full rounded-lg transition-transform duration-500 hover:scale-105" src="/images/productos/Posh_Añejo_Artesanal.png" alt="">
+              </div>
+            </div>
+            <div class="grid gap-4">
+              <div>
+                <img class="h-auto max-w-full rounded-lg transition-transform duration-500 hover:scale-105" src="/images/productos/Posh_Tradicional_Chamula.png" alt="">
+              </div>
+              <div>
+                <img class="h-auto max-w-full rounded-lg transition-transform duration-500 hover:scale-105" src="/images/ns4.jpg" alt="">
+              </div>
+              <div>
+                <img class="h-auto max-w-full rounded-lg transition-transform duration-500 hover:scale-105" src="/images/ns1.jpg" alt="">
               </div>
             </div>
           </div>
@@ -121,10 +121,40 @@
     </div>
   </section>
   
-  <section class="bg-gray-900 parallax" style="background-image: url('/images/inicio3.jpg');">
+  <section class="bg-gray-900 parallax" style="background-image: url('/images/ns2.jpg');">
     <div class="text-center py-8">
-      <h1 class="text-4xl font-bold">Formulario</h1>
-    </div>    
+      <h1 class="text-4xl font-bold text-white mb-6">Contáctanos</h1>
+      <div class="max-w-3xl mx-auto bg-white p-8 rounded-lg shadow-lg" style="background-color: #f3f4f6;"> <!-- Fondo definido con un color específico -->
+        <form action="">
+          <div class="relative mb-6">
+            <label class="flex items-center mb-2 text-gray-600 text-sm font-medium">Nombre <svg width="7" height="7" class="ml-1" viewBox="0 0 7 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+               <path d="M3.11222 6.04545L3.20668 3.94744L1.43679 5.08594L0.894886 4.14134L2.77415 3.18182L0.894886 2.2223L1.43679 1.2777L3.20668 2.41619L3.11222 0.318182H4.19105L4.09659 2.41619L5.86648 1.2777L6.40838 2.2223L4.52912 3.18182L6.40838 4.14134L5.86648 5.08594L4.09659 3.94744L4.19105 6.04545H3.11222Z" fill="#EF4444" />
+             </svg>
+            </label>
+            <input type="text" id="default-search" class="block w-full h-11 px-5 py-2.5 leading-7 text-base font-normal shadow-xs text-gray-900 bg-transparent border border-gray-300 rounded-full placeholder-gray-400 focus:outline-none " placeholder="Name" required="">
+          </div>
+          <div class="relative mb-6">
+            <label class="flex items-center mb-2 text-gray-600 text-sm font-medium">Correo <svg width="7" height="7" class="ml-1" viewBox="0 0 7 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+               <path d="M3.11222 6.04545L3.20668 3.94744L1.43679 5.08594L0.894886 4.14134L2.77415 3.18182L0.894886 2.2223L1.43679 1.2777L3.20668 2.41619L3.11222 0.318182H4.19105L4.09659 2.41619L5.86648 1.2777L6.40838 2.2223L4.52912 3.18182L6.40838 4.14134L5.86648 5.08594L4.09659 3.94744L4.19105 6.04545H3.11222Z" fill="#EF4444" />
+             </svg>
+            </label>
+            <input type="text" id="default-search" class="block w-full h-11 px-5 py-2.5 leading-7 text-base font-normal shadow-xs text-gray-900 bg-transparent border border-gray-300 rounded-full placeholder-gray-400 focus:outline-none " placeholder="name@pagedone.com" required="">
+          </div>
+          <div class="relative mb-6">
+            <label class="flex items-center mb-2 text-gray-600 text-sm font-medium">Mensaje <svg width="7" height="7" class="ml-1" viewBox="0 0 7 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+               <path d="M3.11222 6.04545L3.20668 3.94744L1.43679 5.08594L0.894886 4.14134L2.77415 3.18182L0.894886 2.2223L1.43679 1.2777L3.20668 2.41619L3.11222 0.318182H4.19105L4.09659 2.41619L5.86648 1.2777L6.40838 2.2223L4.52912 3.18182L6.40838 4.14134L5.86648 5.08594L4.09659 3.94744L4.19105 6.04545H3.11222Z" fill="#EF4444"></path>
+             </svg>
+            </label>
+            <div class="flex">
+             <div class="relative w-full">
+               <textarea class="block w-full h-40 px-4 py-2.5 text-base leading-7 font-normal shadow-xs text-gray-900 bg-transparent border border-gray-300 rounded-2xl placeholder-gray-400 focus:outline-none resize-none" placeholder="Write a message..."></textarea>
+             </div>
+            </div>
+          </div>
+          <button class="w-full h-12 bg-indigo-600 hover:bg-indigo-800 transition-all duration-700 rounded-full shadow-xs text-white text-base font-semibold leading-6">Enviar mensaje</button>
+        </form>
+      </div>
+    </div>
   </section>
     
   <footer class="bg-black text-white py-8 px-4 animate-on-scroll">
