--- a/public/pages/favoritos.html
+++ b/public/pages/favoritos.html
@@ -22,29 +22,15 @@
 </head>
 <body>
     <!-- Navbar -->
-    <nav class="fixed w-full bg-black p-4 z-50">
-        <div class="max-w-6xl mx-auto flex items-center justify-between">
-            <div class="text-2xl font-bold">
-                <a href="#" class="text-white fond-mono">Cielo y Tierra</a>
-            </div>
-            <ul class="flex space-x-4 md:space-x-8 items-center">
-                <li>
-                    <a href="/" class="text-white hover:text-white transition duration-100 hover:underline hover:underline-offset-4 hover:decoration-blue-500">
-                        Inicio</a>
-                </li>
-                <li>
-                    <a href="/pages/comprar.html" class="flex items-center bg-red-700 text-white px-1 py-1 pb-1 pt-1 rounded-lg shadow-md hover:bg-red-500 transition">
-                        <img src="/images/icons/Cart.gif" alt="Login Icon" class="w-6 h-6 mr-2 hover:animate-bounce" />
-                        Comprar Ahora
-                    </a>
-                </li>
-                <li>
-                    <a href="/pages/nosotros.html" class="w-16 md:w-32 lg:w-48 text-white hover:text-white transition duration-100 hover:underline hover:underline-offset-4 hover:decoration-blue-500">Acerca de nosotros</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
+  <nav class="fixed w-full bg-black p-4 z-50">
+    <div class="max-w-6xl mx-auto flex items-center justify-between">
+      <span class="text-white text-lg font-bold">CIELO Y TIERRA</span>
+      <button onclick="history.back()" class="text-white flex items-center">
+        <span class="mr-2">⬅</span> Regresar
+      </button>
+    </div>
+  </nav>
+  
     <!-- Contenedor de favoritos -->
     <div class="content max-w-6xl mx-auto p-4">
         <h1 class="text-2xl font-bold mb-4">Favoritos</h1>
@@ -53,6 +39,7 @@
                 <tr class="bg-gray-200">
                     <th class="border border-gray-300 px-4 py-2">Producto</th>
                     <th class="border border-gray-300 px-4 py-2">Precio</th>
+                    <th class="border border-gray-300 px-4 py-2">Cantidad</th>
                 </tr>
             </thead>
             <tbody id="favoritos-body">
@@ -61,11 +48,42 @@
         </table>
     </div>
 
+    <!-- Footer fijo con el total de favoritos -->
+    <footer class="fixed bottom-0 left-0 w-full bg-gray-800 text-white p-4 flex justify-between items-center z-50">
+        <div class="text-lg font-bold">
+            Total: <span id="total-favoritos">$0.00</span>
+        </div>
+        <button class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+            Comprar
+        </button>
+    </footer>
+
+    <!-- Modal para el ticket -->
+    <div id="modal-ticket" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden">
+        <div class="bg-white p-6 rounded-lg shadow-lg max-w-md w-full">
+            <h2 class="text-xl font-bold mb-4">Ticket de Compra</h2>
+            <div id="ticket-productos" class="mb-4">
+                <!-- Productos se generarán dinámicamente aquí -->
+            </div>
+            <div class="flex justify-between font-bold">
+                Total: <span id="ticket-total">$0.00</span>
+            </div>
+            <div class="mt-4 flex justify-end space-x-2">
+                <button id="cerrar-modal" class="bg-gray-500 hover:bg-gray-600 text-white font-bold py-2 px-4 rounded">Cerrar</button>
+                <button id="confirmar-compra" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Confirmar Compra</button>
+            </div>
+        </div>
+    </div>
+
     <script>
         // Función para cargar los productos favoritos desde la base de datos
         async function cargarFavoritos() {
             try {
-                const usuarioId = 36; // ID del usuario actualmente autenticado
+                const usuarioId = localStorage.getItem('userId'); // Obtener el ID del usuario dinámicamente
+                if (!usuarioId) {
+                    console.error('No se encontró un ID de usuario. Por favor, inicia sesión.');
+                    return;
+                }
                 const response = await fetch(`/api/favorites/${usuarioId}`);
                 if (!response.ok) {
                     console.error('Error al obtener los favoritos');
@@ -73,6 +91,7 @@
                 }
 
                 const productos = await response.json();
+                console.log('Productos favoritos obtenidos:', productos); // Debugging log
                 const favoritosBody = document.getElementById('favoritos-body');
                 favoritosBody.innerHTML = '';
 
@@ -80,16 +99,170 @@
                     const fila = document.createElement('tr');
                     fila.innerHTML = `
                         <td class="border border-gray-300 px-4 py-2">${producto.nombre}</td>
+                        <td class="border border-gray-300 px-4 py-2">${producto.cantidad || 1}</td>
                         <td class="border border-gray-300 px-4 py-2">${producto.precio}</td>
+                        
                     `;
                     favoritosBody.appendChild(fila);
                 });
+
+                actualizarTotalFavoritos(); // Actualizar el total después de cargar los favoritos
             } catch (error) {
                 console.error('Error al cargar los favoritos:', error);
             }
         }
 
-        document.addEventListener('DOMContentLoaded', cargarFavoritos);
+        // Actualizar el total de favoritos dinámicamente
+        function actualizarTotalFavoritos() {
+            const favoritosBody = document.getElementById('favoritos-body');
+            const filas = favoritosBody.querySelectorAll('tr');
+            let total = 0;
+
+            filas.forEach(fila => {
+                const precioCelda = fila.querySelector('td:nth-child(2)');
+                const cantidadCelda = fila.querySelector('td:nth-child(3)');
+                if (precioCelda && cantidadCelda) {
+                    const precio = parseFloat(precioCelda.textContent) || 0;
+                    const cantidad = parseInt(cantidadCelda.textContent) || 1;
+                    total += precio * cantidad;
+                }
+            });
+
+            document.getElementById('total-favoritos').textContent = `$${total.toFixed(2)}`;
+        }
+
+        // Llamar a actualizarTotalFavoritos después de cargar los favoritos
+        document.addEventListener('DOMContentLoaded', () => {
+            cargarFavoritos();
+            actualizarTotalFavoritos();
+        });
+
+        // Mostrar el modal con los productos y el total
+        document.querySelector('footer button').addEventListener('click', () => {
+            const modal = document.getElementById('modal-ticket');
+            const ticketProductos = document.getElementById('ticket-productos');
+            const ticketTotal = document.getElementById('ticket-total');
+
+            const favoritosBody = document.getElementById('favoritos-body');
+            const filas = favoritosBody.querySelectorAll('tr');
+            let total = 0;
+
+            ticketProductos.innerHTML = '';
+
+            filas.forEach(fila => {
+                const producto = fila.querySelector('td:first-child').textContent;
+                const precio = fila.querySelector('td:nth-child(2)').textContent;
+                const cantidad = fila.querySelector('td:nth-child(3)').textContent;
+                const subtotal = parseFloat(precio) * parseInt(cantidad);
+
+                total += subtotal;
+
+                const productoDiv = document.createElement('div');
+                productoDiv.className = 'flex justify-between mb-2';
+                productoDiv.innerHTML = `
+                    <span>${producto} (x${cantidad})</span>
+                    <span>$${subtotal.toFixed(2)}</span>
+                `;
+                ticketProductos.appendChild(productoDiv);
+            });
+
+            ticketTotal.textContent = `$${total.toFixed(2)}`;
+            modal.classList.remove('hidden');
+        });
+
+        // Cerrar el modal
+        document.getElementById('cerrar-modal').addEventListener('click', () => {
+            document.getElementById('modal-ticket').classList.add('hidden');
+        });
+
+        // Confirmar la compra y enviar correo
+        document.getElementById('confirmar-compra').addEventListener('click', async () => {
+            try {
+                const favoritosBody = document.getElementById('favoritos-body');
+                const filas = favoritosBody.querySelectorAll('tr');
+                const productos = [];
+
+                filas.forEach(fila => {
+                    const producto = fila.querySelector('td:first-child').textContent;
+                    const precio = fila.querySelector('td:nth-child(2)').textContent;
+                    const cantidad = fila.querySelector('td:nth-child(3)').textContent;
+                    const subtotal = parseFloat(precio) * parseInt(cantidad);
+
+                    productos.push({ producto, precio, cantidad, subtotal });
+                });
+
+                const response = await fetch('/api/send-email', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ productos })
+                });
+
+                if (response.ok) {
+                    mostrarNotificacionExito('¡Compra confirmada!', 'Se ha enviado un correo con los detalles de tu compra.');
+                    document.getElementById('modal-ticket').classList.add('hidden');
+                } else {
+                    mostrarNotificacionExito('Error', 'Error al confirmar la compra. Inténtalo de nuevo.');
+                }
+            } catch (error) {
+                console.error('Error al confirmar la compra:', error);
+                mostrarNotificacionExito('Error', 'Error al confirmar la compra. Inténtalo de nuevo.');
+            }
+        });
+
+        // Cambiar colores de los botones en el modal
+        document.getElementById('cerrar-modal').className = 'bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded';
+        document.getElementById('confirmar-compra').className = 'bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-4 rounded';
+
+        // Mostrar notificación bonita al enviar el correo
+        function mostrarNotificacionExito(titulo, mensaje) {
+            const noti = document.createElement('div');
+            noti.className = 'fixed top-0 left-0 w-full flex justify-center z-50';
+            noti.innerHTML = `
+                <div class="bg-green-500 text-white px-8 py-4 mt-6 rounded-lg shadow-lg flex flex-col items-center animate__animated animate__fadeInDown" style="max-width: 400px;">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10 mb-2" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2l4-4m5 2a9 9 0 11-18 0a9 9 0 0118 0z" /></svg>
+                    <h2 class="text-xl font-bold mb-1">${titulo}</h2>
+                    <p class="text-center">${mensaje}</p>
+                </div>
+            `;
+            document.body.appendChild(noti);
+            setTimeout(() => {
+                noti.remove();
+            }, 3500);
+        }
+
+        // Reemplazar alert con la notificación bonita
+        document.getElementById('confirmar-compra').addEventListener('click', async () => {
+            try {
+                const favoritosBody = document.getElementById('favoritos-body');
+                const filas = favoritosBody.querySelectorAll('tr');
+                const productos = [];
+
+                filas.forEach(fila => {
+                    const producto = fila.querySelector('td:first-child').textContent;
+                    const precio = fila.querySelector('td:nth-child(2)').textContent;
+                    const cantidad = fila.querySelector('td:nth-child(3)').textContent;
+                    const subtotal = parseFloat(precio) * parseInt(cantidad);
+
+                    productos.push({ producto, precio, cantidad, subtotal });
+                });
+
+                const response = await fetch('/api/send-email', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ productos })
+                });
+
+                if (response.ok) {
+                    mostrarNotificacionExito('¡Compra confirmada!', 'Se ha enviado un correo con los detalles de tu compra.');
+                    document.getElementById('modal-ticket').classList.add('hidden');
+                } else {
+                    mostrarNotificacionExito('Error', 'Error al confirmar la compra. Inténtalo de nuevo.');
+                }
+            } catch (error) {
+                console.error('Error al confirmar la compra:', error);
+                mostrarNotificacionExito('Error', 'Error al confirmar la compra. Inténtalo de nuevo.');
+            }
+        });
     </script>
 </body>
 </html>
